--- a/root/css/style.css
+++ b/root/css/style.css
@@ -70,6 +70,7 @@ nav {
 .icon-main {
   font-size: 16px;
   font-weight: 700;
+  margin-left: 40px;
 }
 
 nav ul {
@@ -91,3 +92,42 @@ nav ul img {
   width: 15px;
 }
 
+/*            MAIN              */
+
+/* HERO */
+#hero {
+  background-image: url('../img/bowl-and-pet-daities-on-green-background 1bowl.png');
+  height: 409px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left center;
+  position: relative;
+}
+
+#hero div {
+  position: absolute;
+  top: 60%;
+  right: 12px;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 120px;
+}
+
+#hero div p:first-child {
+  background-color: white;
+  font-size: 30px;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+
+#hero div a {
+  text-decoration: none;
+  background-color: var(--primary-color);
+  color: #fff;
+  padding: 0.7rem 1.5rem;
+  border-radius: 5px;
+  text-transform: uppercase;
+}
