--- a/root/css/style.css
+++ b/root/css/style.css
@@ -244,6 +244,7 @@ nav ul img {
 .subscription-text {
   display: flex;
   align-items: center;
+  margin-left: 25px;
 }
 
 .subscription-text h5 {
@@ -264,4 +265,58 @@ nav ul img {
   font-size: 9px;
   padding: 0.8rem 0;
 
+}
+
+/* CONTACT INFORMATION */
+#contact-information {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0 5px 75px;
+  background-color: var(--secondary-color);
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-container > div {
+  padding: 20px;
+  display: flex;
+  color: #fff; 
+}
+
+.contact-container > div .details {
+  margin-left: 30px;
+}
+
+.contact-container > div h5 {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.contact-container > div p {
+  font-size: 10px;
+  font-weight: 700;
+  color: #8A8787;
+}
+
+.icon-secondary {
+  margin-right: 75px;
+  color: #fff;
+  font-size: 20px;
+}
+
+.icon-secondary span {
+  color: var(--primary-color)
+}
+
+/* LEGAL INFORMATION */
+#legal-information {
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  font-size: 10px;
+  padding: .2rem;
 }
